popup/popup.css
body {
	margin: 5px;
	width: 40em;
}

input {
	margin: 2px;
}

#popupIcon {
	width: 18px;
	height: 18px;
}

#heading h2 {
	display: inline;
}

#btnSubmit {
	border-radius: 5px;
	height: 30px;
	width: 50px;
	font-weight: bold;
	margin: 5px;
}

#heading {
	font-family: 'courier new';
	font-size: 16px;
}

